--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </audio>
 
 <div class="container">
-  <img class="bg-anim" src="https://raw.githubusercontent.com/OrganicEarth7/OrganicEarth7.github.io/main/doom24.png">
+  <img class="bg-anim" src="https://raw.githubusercontent.com/OrganicEarth7/OrganicEarth7.github.io/main/stop_talking._youre_gonna_get_us_killed.png">
 
   <h1 class="top anim-enter" id="top" style="font-family: Irresponsible;"><span style="animation-delay:0s">Y</span><span style="animation-delay:0.1s">O</span><span style="animation-delay:0.2s">U</span><span style="animation-delay:0.30000000000000004s">R</span><span style="animation-delay:0.4s">&nbsp;</span><span style="animation-delay:0.5s">E</span><span style="animation-delay:0.6000000000000001s">N</span><span style="animation-delay:0.7000000000000001s">D</span><span style="animation-delay:0.8s">&nbsp;</span><span style="animation-delay:0.9s">I</span><span style="animation-delay:1s">S</span><span style="animation-delay:1.1s">&nbsp;</span><span style="animation-delay:1.2000000000000002s">N</span><span style="animation-delay:1.3s">E</span><span style="animation-delay:1.4000000000000001s">A</span><span style="animation-delay:1.5s">R</span></h1>
   <h1 class="bottom anim-enter" id="bottom" style="font-family: PlasticMachine;"><span style="animation-delay:0s">W</span><span style="animation-delay:0.1s">E</span><span style="animation-delay:0.2s">'</span><span style="animation-delay:0.30000000000000004s">R</span><span style="animation-delay:0.4s">E</span><span style="animation-delay:0.5s">&nbsp;</span><span style="animation-delay:0.6000000000000001s">C</span><span style="animation-delay:0.7000000000000001s">O</span><span style="animation-delay:0.8s">M</span><span style="animation-delay:0.9s">I</span><span style="animation-delay:1s">N</span><span style="animation-delay:1.1s">G</span><span style="animation-delay:1.2000000000000002s">&nbsp;</span><span style="animation-delay:1.3s">F</span><span style="animation-delay:1.4000000000000001s">O</span><span style="animation-delay:1.5s">R</span><span style="animation-delay:1.6s">&nbsp;</span><span style="animation-delay:1.7000000000000002s">Y</span><span style="animation-delay:1.8s">O</span><span style="animation-delay:1.9000000000000001s">U</span></h1>
@@ -148,13 +148,11 @@
     "YOU WILL DIE IN DARKNESS - AND BE FORGOTTEN",
     "YOUR LEGACY ENDS HERE - IN A POOL OF SHAME",
     "NOTHING MATTERS ANYMORE - ESPECIALLY NOT YOU",
-    "THE ABYSS STARES BACK - AND IT IS HUNGRY",
+    "THE BARON IS HERE - THE END IS COMING",
     
     /* --- COMEDIC/ABSURD THREATS --- */
     "I'M GOING TO PUSH YOU - INTO THE SUN'S CORE",
     "YOUR COLLECTION OF FUNKO POPS - WILL BE MELTED DOWN",
-
-    
   "YOUR DOOM IS SEALED - NO MERCY AWAITS",
   "WE WILL HUNT YOU DOWN - UNTIL YOUR LAST BREATH",
   "BUGS GET STUFFED - INTO TAXIDERMY DISPLAYS",
